--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,4 +8,14 @@
     padding: 0;
     scroll-behavior: smooth;
     font-family: "Mozilla Text";
+
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
 }
